# Lab_1-3

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/iu3/lab_1_3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ru/iu3/lab_1_3/: MainActivity.java  PinpadActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ru/iu3/lab_1_3/: ExampleUnitTest.java
backend/: pom.xml
backend/backend/: pom.xml
backend/backend/src/main/java/com/example/backend/: BackendApplication.java
backend/backend/src/main/java/com/example/backend/auth/: AuthenticationProvider.java  SecurityConfiguration.java
backend/backend/src/main/java/com/example/backend/controllers/: ArtistsController.java  CountryController.java  LoginController.java  SampleController.java
backend/backend/src/main/java/com/example/backend/models/: Country.java  User.java
backend/backend/src/main/java/com/example/backend/repositories/: CountryRepository.java  UserRepository.java
backend/backend/src/main/java/com/example/backend/tools/: Utils.java
backend/backend/src/main/resources/: application.properties
backend/src/test/java/com/example/BMSTU_SD/backend/: BackendApplicationTests.java
gradle/wrapper/: gradle-wrapper.properties
